# RevomonAuto

./: README.md  pvp_test.py  pyproject.toml  revomonauto_expert_analysis.md  test.py
examples/: example_client_usage.py  main.py
src/revomonauto/controllers/: revo_controller.py
src/revomonauto/data/gradex_clients/: abilities_client.py  capsules_client.py  fruitys_client.py  items_client.py  locations_client.py  moves_client.py  natures_client.py  status_effects_client.py  types_client.py  weather_client.py
src/revomonauto/data/gradex_jsons/: counterdex.json  revomon_moves.json
src/revomonauto/models/: action.py  revo_app.py  revomon_app.py  states.py  strategies.py
src/revomonauto/models/revomon_ui/elements/: battle_elements.py  landmark_elements.py  login_elements.py  main_menu_elements.py  overworld_elements.py  tv_elements.py  (+5 more)
src/revomonauto/revomon/: __init__.py  revomon_ui.py
src/revomonauto/revomon/clients/: README.md  __init__.py  abilities_client.py  base_client.py  battle_mechanics_client.py  capsules_client.py  counterdex_client.py  evolution_client.py  example_usage.py  fruitys_client.py  items_client.py  locations_client.py  moves_client.py  natures_client.py  owned_lands_client.py  revomon_client.py  revomon_moves_client.py  status_effects_client.py  test_locations.py  types_client.py  weather_client.py
src/revomonauto/revomon/data/: owned_lands.json  revomon.json
src/revomonauto/revomon/scenes/: tv_scene2.pxz
tests/: pvp_test.py  scene_detection.py  test.py  test_choose_move.py  test_clients.py  test_locations_client.py  test_states.py
(+21 files in other folders)
