[project]
name = "revomonauto"
version = "0.2.0"
description = "Automation helpers for the Revomon Android game running under BlueStacks, built on top of the Bluepyll automation framework."
readme = "README.md"
authors = [
    { name = "Malcom Godlike", email = "ivmno1special@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bluepyll==0.0.10",
    "pillow>=11.3.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
